[FIXED] Checkbox label
Clicking on the checkbox label failed to select or deselect the item.
Inserted a div "label" in absolute that covers the whole box and listens
to the click instead of the container.

--- a/src/assets/style/preferences.css
+++ b/src/assets/style/preferences.css
@@ -54,6 +54,12 @@
   font-size: 14px;
   color: var(--primaryColor);
 }
+
+.placeholder {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
 /*Form end*/
 
 /*XS - smartphones landscape*/
